# bot

./: .gitignore  bot.cabal  config.sample  stack.yaml
examples/: basta.comm  chat.comm  dice.comm  em.comm  empty.comm  for_test.comm  hello.comm  pokeapi.comm  selfdestruct.comm  succ.comm  swapi.comm  weather.comm
informe/: informe.tex
src/: Bot.hs  Check.hs  Classes.hs  CommandAST.hs  Communication.hs  Environment.hs  Execute.hs  Log.hs  Main.hs  Map.hs  Monads.hs  Parser.y  PrettyPrint.hs  State.hs  TelegramAPI.hs  TelegramAPITypes.hs
test/: HelloWorld.comm  basta.comm  chat.comm  em.comm  for_test.comm  help.comm  opening.comm  pokeapi.comm  pokemon.comm  start.comm  succ.comm  swapi.comm  test_post.comm  zero.comm
