name:                bot
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Jorge Galat
maintainer:          jrgglt@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable bot
  main-is:             Main.hs
  other-modules:       Parser
  -- other-extensions:
  build-depends:       base,
                       bytestring,
                       http-conduit,
                       http-types,
                       http-client,
                       aeson,
                       transformers,
                       array,
                       containers,
                       mtl,
                       string-conversions,
                       unix,
                       time,
                       pretty,
                       readline
  hs-source-dirs:      src
  default-language:    Haskell2010
